# gifdance

./: .gitignore  CMakeLists.txt  LICENSE  README.ja.md  README.md  THIRD_PARTY_NOTICES.md
src/: GifDecoder.cpp  GifDecoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
